--- a/src/app/components/bookmark-repositories/bookmark-repositories.component.html
+++ b/src/app/components/bookmark-repositories/bookmark-repositories.component.html
@@ -2,7 +2,9 @@
   crossorigin="anonymous">
   <nav  class="navbar navbar-inverse navbar-fixed-top" style="height: 7%;">
         <div class="container">
-  <a [routerLink]="['/repositories']">Go Back</a>
+  <a [routerLink]="['/repositories']">
+<button class="btn btn-light">Go Back</button>
+</a>
         </div>
   </nav>
 <!--BOOKMARK REPOSITORIES -->
